--- a/src/app/global.css
+++ b/src/app/global.css
@@ -24,5 +24,7 @@ body {
         rgba(14, 116, 144, 0.075)
     );
 
-    @apply border-b-2;
+.nav-link {
+    padding: 0.75em !important;
+    margin: -0.75em !important;
 }
