--- a/src/app/global.css
+++ b/src/app/global.css
@@ -9,20 +9,34 @@ body {
 }
 
 .navbar-border {
+    border-image-source: linear-gradient(
+        to left,
+        rgba(14, 116, 144, 0.075),
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0),
+        rgba(14, 116, 144, 0.075)
+    );
+
+    /* md in tailwind */
+    @media (min-width: 768px) {
+        border-image-source: linear-gradient(
+            to left,
+            rgba(14, 116, 144, 0.075),
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0),
+            rgba(14, 116, 144, 0.075)
+        );
+    }
+
     border-style: solid;
     border-image-slice: 1;
     border-right: 0;
     border-top: 0;
     border-left: 0;
-    border-image-source: linear-gradient(
-        to left,
-        rgba(14, 116, 144, 0.075),
-        rgba(216, 232, 237, 0.25),
-        rgba(216, 232, 237, 0.25),
-        rgba(216, 232, 237, 0.25),
-        rgba(216, 232, 237, 0.25),
-        rgba(14, 116, 144, 0.075)
-    );
+
+    @apply border-b-2;
 }
 
 .nav-link {
