--- a/src/app/global.css
+++ b/src/app/global.css
@@ -40,8 +40,11 @@ body {
 }
 
 .nav-link {
-    padding: 0.75em !important;
-    margin: -0.75em !important;
+    /* md in tailwind */
+    @media (min-width: 768px) {
+        padding: 0.75em !important;
+        margin: -0.75em !important;
+    }
 }
 
 *:focus-visible {
