Fix flip board button

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -63,3 +63,11 @@ body {
         outline-style: solid;
     }
 }
+
+.board .piece {
+    transform: rotate(-180deg);
+}
+
+.board:not([style*='rotate(180deg)']) .piece {
+    transform: rotate(0deg);
+}
