--- a/src/app/global.css
+++ b/src/app/global.css
@@ -9,6 +9,8 @@ body {
 }
 
 .nav-link {
+    @apply text-base !important;
+
     /* md in tailwind */
     @media (min-width: 768px) {
         padding: 0.75em !important;
