--- a/src/app/global.css
+++ b/src/app/global.css
@@ -46,3 +46,8 @@ body {
         outline-style: solid;
     }
 }
+
+:root {
+    --toastify-color-success: rgb(14 159 110);
+    --toastify-color-error: rgb(240 82 82);
+}
