--- a/src/app/global.css
+++ b/src/app/global.css
@@ -41,9 +41,9 @@ body {
     user-select: none; /* Standard syntax */
 }
 
-@media only screen and (min-width: 500px) {
+@media only screen and (max-width: 500px) {
     .board {
-        outline-style: solid;
+        border: none;
     }
 }
 
