--- a/src/app/global.css
+++ b/src/app/global.css
@@ -6,6 +6,13 @@ html,
 body {
     height: 100%;
     margin: 0;
+    overflow-x: hidden;
+}
+
+@media only screen and (max-width: 320px) {
+    body {
+        overflow-x: scroll;
+    }
 }
 
 .nav-link {
