--- a/src/app/global.css
+++ b/src/app/global.css
@@ -4,8 +4,6 @@
 
 html,
 body {
-    height: 100%;
-    margin: 0;
     overflow-x: hidden;
 }
 
@@ -48,10 +46,17 @@ body {
     user-select: none; /* Standard syntax */
 }
 
+.board {
+    border-color: black;
+    border-style: solid;
+    border-width: 6px;
+    box-sizing: border-box;
+}
+
 @media only screen and (max-width: 500px) {
-    .board {
-        border: none;
-    }
+        .board {
+            border: none;
+        }
 }
 
 :root {
